Adjustments to build.gradle and gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@
 sourceCompatibility = 11
 targetCompatibility = 11
 
-group = eu.hansolo
-version = 11.1
+group = eu.hansolo.fx.regulators
+version = 11.2
