replaced jar task

--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,27 @@ jar {
                 'Main-Class': 'eu.hansolo.fx.regulators.Launcher')
     }
 }
+jar {
+    manifest {
+        attributes(
+                'Built-By': System.properties['user.name'],
+                'Created-By': System.properties['java.version'] + " (" + System.properties['java.vendor'] + " " + System.properties['java.vm.version'] + ")",
+                'Build-Date': project.buildDate,
+                'Build-Time': project.buildTime,
+                'Build-Revision': versioning.info.commit,
+                'Specification-Title': project.name,
+                'Specification-Version': project.version,
+                'Implementation-Title': project.name,
+                'Implementation-Version': project.version,
+                'Bundle-Name': project.name,
+                'Bundle-License': 'https://www.apache.org/licenses/LICENSE-2.0;description=Apache License Version 2.0;link=https://www.eclipse.org/legal/eplfaq.php',
+                'Bundle-Description': description,
+                'Bundle-SymbolicName': 'eu.hansolo.fx.regulators',
+                'Export-Package': 'eu.hansolo.fx.regulators'
+        )
+    }
+}
+
 
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
