--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@
 sourceCompatibility = 11
 targetCompatibility = 11
 
-group = eu.hansolo.fx.regulators
-version = 11.5
+group = eu.hansolo
+version = 11.6
