--- a/build.gradle
+++ b/build.gradle
@@ -63,28 +63,14 @@ dependencies {
     implementation 'org.kordamp.ikonli:ikonli-weathericons-pack:11.5.0'
 }
 
-mainClassName = "$moduleName/eu.hansolo.fx.regulators.Main"
+mainClassName = "$moduleName/eu.hansolo.regulators.Main"
 
 // start the app from gradle
 task Demo(type: JavaExec) {
-    main = "eu.hansolo.fx.regulators.Launcher"
+    main = "eu.hansolo.regulators.Launcher"
     classpath = sourceSets.main.runtimeClasspath
 }
 
-jar {
-    from {
-        (configurations.runtimeClasspath).collect {  it.isDirectory() ? it : zipTree(it)  }
-    } {
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-    }
-    manifest {
-        attributes ('Implementation-Title': 'Main',
-                'Class-Path': 'Regulators-1.0-SNAPSHOT.jar ',
-                'Main-Class': 'eu.hansolo.fx.regulators.Launcher')
-    }
-}
 jar {
     manifest {
         attributes(
@@ -100,8 +86,8 @@ jar {
                 'Bundle-Name': project.name,
                 'Bundle-License': 'https://www.apache.org/licenses/LICENSE-2.0;description=Apache License Version 2.0;link=https://www.eclipse.org/legal/eplfaq.php',
                 'Bundle-Description': description,
-                'Bundle-SymbolicName': 'eu.hansolo.fx.regulators',
-                'Export-Package': 'eu.hansolo.fx.regulators, org.kordamp.ikonli'
+                'Bundle-SymbolicName': 'eu.hansolo.regulators',
+                'Export-Package': 'eu.hansolo.regulators'
         )
     }
 }
@@ -110,7 +96,7 @@ jar {
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'eu.hansolo.fx.regulators'
+        name = 'eu.hansolo.regulators'
     }
 }
 
